--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,20 +1,61 @@
+# server {
+#   listen 80;
+#   server_name localhost;
+
+#   root /usr/share/nginx/html;
+#   index index.html;
+
+#   # Para archivos estáticos (asegura que JS tenga el MIME correcto)
+#   location ~* \.(js|mjs|css|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|otf)$ {
+#     try_files $uri =404;
+#     access_log off;
+#     add_header Cache-Control "public, max-age=31536000";
+#   }
+
+#   # Para rutas de Angular (SPA fallback)
+#   location / {
+#     try_files $uri $uri/ /index.html;
+#     }
+# }
+
 server {
   listen 80;
-  server_name localhost;
+  server_name _;  # en Render no uses "localhost"
 
   root /usr/share/nginx/html;
   index index.html;
 
-  # Para archivos estáticos (asegura que JS tenga el MIME correcto)
-  location ~* \.(js|mjs|css|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|otf)$ {
+  # Archivos estáticos (con caché larga)
+  location ~* \.(js|mjs|css|json|ico|png|jpg|jpeg|gif|svg|woff2?|ttf|eot|otf)$ {
     try_files $uri =404;
     access_log off;
     add_header Cache-Control "public, max-age=31536000";
   }
 
-  # Para rutas de Angular (SPA fallback)
-  location / {
-    try_files $uri $uri/ /index.html;
-    }
-}
+  # ---- API Products (captura /api/products y /api/products/...) ----
+  location ^~ /api/products {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_http_version 1.1;
 
+    proxy_pass http://products-api:8081/;   # nombre del servicio en render.yaml
+  }
+
+  # ---- API Categories ----
+  location ^~ /api/categories {
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_http_version 1.1;
+
+    proxy_pass http://categories-api:8082/;
+  }
+
+  # SPA fallback
+  location / {
+    try_files $uri /index.html;
+  }
+}
