--- a/render.yaml
+++ b/render.yaml
@@ -71,14 +71,15 @@ services:
         value: update
     healthCheckPath: /api/products/health
 
-  # 4) Frontend Angular como Static Site (sin Nginx)
-  - type: web
-    name: productos-categorias-frontend
-    runtime: static
-    rootDir: frontend
-    buildCommand: npm ci && npm run build -- --configuration production
-    publishPath: dist/frontend/browser
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: public, max-age=600
+# 4) Frontend Angular como Static Site
+- type: static_site
+  name: productos-categorias-frontend
+  rootDir: frontend
+  buildCommand: npm ci && npm run build -- --configuration production
+  publishPath: dist/frontend/browser
+  headers:
+    - path: /*
+      name: Cache-Control
+      value: public, max-age=600
+  region: oregon   # o virginia, pero usa la misma que los demás
+
