--- a/render.yaml
+++ b/render.yaml
@@ -71,15 +71,19 @@ services:
         value: update
     healthCheckPath: /api/products/health
 
-  # 4) Frontend Angular como Static Site
-  - type: static_site
+# 4) Frontend Angular con Nginx (Docker)
+  - type: web
     name: productos-categorias-frontend
+    runtime: docker
     rootDir: frontend
-    buildCommand: npm ci && npm run build -- --configuration production
-    publishPath: dist/frontend/browser
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: public, max-age=600
-    region: oregon   # o virginia, pero usa la misma que los demás
+    plan: starter
+    region: oregon   # o virginia, pero usa la misma en todos
+    envVars:
+      - key: PORT
+        value: "10000"
+      # Después del primer deploy, reemplaza estos dos con los dominios reales:
+      - key: PRODUCTS_API_URL
+        value: https://products-api.onrender.com
+      - key: CATEGORIES_API_URL
+        value: https://categories-api.onrender.com
 
