--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,61 +1,50 @@
-# server {
-#   listen 80;
-#   server_name localhost;
-
-#   root /usr/share/nginx/html;
-#   index index.html;
-
-#   # Para archivos estáticos (asegura que JS tenga el MIME correcto)
-#   location ~* \.(js|mjs|css|json|ico|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|otf)$ {
-#     try_files $uri =404;
-#     access_log off;
-#     add_header Cache-Control "public, max-age=31536000";
-#   }
-
-#   # Para rutas de Angular (SPA fallback)
-#   location / {
-#     try_files $uri $uri/ /index.html;
-#     }
-# }
-
 server {
   listen 80;
-  server_name _;  # en Render no uses "localhost"
+  server_name _;
 
   root /usr/share/nginx/html;
   index index.html;
 
-  # Archivos estáticos (con caché larga)
+  # Archivos estáticos
   location ~* \.(js|mjs|css|json|ico|png|jpg|jpeg|gif|svg|woff2?|ttf|eot|otf)$ {
     try_files $uri =404;
-    access_log off;
     add_header Cache-Control "public, max-age=31536000";
+    access_log off;
   }
 
-  # ---- API Products (captura /api/products y /api/products/...) ----
-  location ^~ /api/products {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_http_version 1.1;
+# === PRODUCTS ===
+# SIN barra final (exacto): /api/products
+location = /api/products {
+  proxy_pass http://backend-products:8080/api/products;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+}
 
-    proxy_pass http://products-api:8081/;   # nombre del servicio en render.yaml
-  }
+# CON barra final y subrutas: /api/products/...
+location /api/products/ {
+  proxy_pass http://backend-products:8080/api/products/;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+}
 
-  # ---- API Categories ----
-  location ^~ /api/categories {
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_http_version 1.1;
+# === CATEGORIES ===
+location = /api/categories {
+  proxy_pass http://backend-categories:8080/api/categories;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+}
 
-    proxy_pass http://categories-api:8082/;
-  }
+location /api/categories/ {
+  proxy_pass http://backend-categories:8080/api/categories/;
+  proxy_set_header Host $host;
+  proxy_set_header X-Real-IP $remote_addr;
+}
+
+# (deja tu SPA fallback al final)
+
 
   # SPA fallback
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 }
